pkg/ibmvpc/examples/out/explain_out/VsiToVsi1_all_vpcs_explain_detail.txt
Explaining connectivity from vsi2-ky to vsi3b-ky within test-vpc1-ky
Interpreted source: vsi2-ky[10.240.20.4]
Interpreted destination: vsi3b-ky[10.240.30.4]
====================================================================

Connections from vsi2-ky[10.240.20.4] to vsi3b-ky[10.240.30.4]: protocol: TCP

Path:
	vsi2-ky[10.240.20.4] -> security group sg2-ky -> network ACL acl2-ky -> subnet2-ky -> 
	subnet3-ky -> network ACL acl3-ky -> security group sg2-ky -> vsi3b-ky[10.240.30.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg2-ky allows connection with the following allow rules
			index: 5, direction: outbound,  conns: protocol: all, remote: 10.240.30.0/24, local: 0.0.0.0/0
			index: 6, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, remote: sg2-ky (10.240.20.4/32,10.240.30.4/32), local: 0.0.0.0/0
		network ACL acl2-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg2-ky allows connection with the following allow rules
			index: 7, direction: inbound,  conns: protocol: tcp,  dstPorts: 1-65535, remote: sg2-ky (10.240.20.4/32,10.240.30.4/32), local: 0.0.0.0/0

TCP response is enabled; The relevant rules are:
	Egress:
		network ACL acl3-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl2-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
